--- a/2023/03/21.md
+++ b/2023/03/21.md
@@ -9,6 +9,8 @@
   - セクション3(VIMのプラグイン)
 # 感じたこと
 - 今日は今まで習ったvimコマンドを使いながら簡単なスクリプトを書いて復習に充てた
+- 最近は家だとなかなか集中できなかったので、難波にあるモニター付きのコワーキングスペースを契約した
+- 3/26日のボーカルオーディションが終わったら、HCの課題にフルコミットする
 # 学習時間  
 今日: 2h  
 累計: 28h 
