--- a/2023/06/11.md
+++ b/2023/06/11.md
@@ -18,9 +18,9 @@ schema {
 - 米国AI開発者がゼロから教えるDocker講座(Udemy)
 - HTML/CSSアウトプット課題の修正が来たら対応
 # 感じたこと
-- 一旦HTML/CSSアウトプット課題が終わってホッとしてます。(修正はあるかと思いますが)課題に取り組む前はHTML/CSSに強い苦手意識があったのですが、今は得意とまでは行きません割と好きになれたので良かったです。
+- 一旦HTML/CSSアウトプット課題が終わってホッとしてます。(修正はあるかと思いますが)課題に取り組む前はHTML/CSSに強い苦手意識があったのですが、今は得意とまではいきませんが割と好きになれたので良かったです。
 
 # 学習時間  
 今日: 5h 
-累計: 114.5h 
+累計: 119.5h 
 
