--- a/2023/06/15.md
+++ b/2023/06/15.md
@@ -2,14 +2,14 @@
 - 米国AI開発者がゼロから教えるDocker講座(Udemy)
 # わかったこと   
 - イメージに名前をつけて保存
-    `- docker tag <source> <username//リポジトリ名>`
+    - `docker tag <source> <username//リポジトリ名>`
 - イメージ全削除
     - `docker rmi $(docker images - q)`
 # 次やること
 - 米国AI開発者がゼロから教えるDocker講座(Udemy)
 - HTML/CSSアウトプット課題の修正が来たら対応
 # 感じたこと
-- ここ4日間ほど体調を崩してしまって期間が空いてしまいましたが、引き続き
+- ここ4日間ほど体調を崩してしまって期間が空いてしまいましたが、docker以降面白そうなので引き続き集中して進めていきたいです。
 
 # 学習時間  
 今日: 1h 
