--- a/2023/07/13.md
+++ b/2023/07/13.md
@@ -3,7 +3,7 @@
 + 米国AI開発者がゼロから教えるDocker講座(Udemy)
 # わかったこと   
 + `node:16-slim`イメージで使えるyarnのバージョンを確認したいときは、コンテナを起動し、その中で`yarn --version`を実行する
-    + `docker-compose run node yarn --version`
+    + `docker run node:16-slim yarn --version`
 # 次やること
 - 米国AI開発者がゼロから教えるDocker講座(Udemy)
 + railsアプリのdocker化
