--- a/2023/11/11.md
+++ b/2023/11/11.md
@@ -1,6 +1,6 @@
 # 取り組んだ課題 
 + ECサイト (環境構築->商品一覧機能)
-    + 商品一覧機能・商品詳細機能実装
+    + 商品一覧機能・商品詳細機能実装 コードレビュー依頼まで
     + 商品管理機能
 # わかったこと 
 + `history | grep rubocop`で、過去に実行したコマンドから`rubocop`という単語が含まれているものを抽出する
