--- a/2023/11/27.md
+++ b/2023/11/27.md
@@ -11,7 +11,7 @@
     + 雛形作成
 # 感じたこと
 + カート機能とりあえず問題なく動作するようには実装できましたが、設計があまり良くない感が否めなかった中、案の定ご指摘を頂いたので、明日引き続き修正していきたいと思います。
-+ 年内にtwitterクローン作り終えたいです。(予定としては、年内にTwitterクローンにRSpecを導入するところまでを予定しています)
++ 年内にtwitterクローン作り終えたいです。(年内にTwitterクローンにRSpecを導入するところまでを予定しています)
 # 学習時間  
 今日: 0.5h 
 累計: 417h
