--- a/2024/01/10.md
+++ b/2024/01/10.md
@@ -14,7 +14,7 @@
   + Bundlerを使用して、正しいバージョンのgemを使ってコマンドを実行 (依存関係の衝突を防ぐために重要)
   + `rails`コマンドを使う場合、Bundlerが自動的に正しいバージョンのRailsを使ってくれる
 # 次やること
-+ Xクローン 環境構築
++ Xクローン サインアップ・ログイン機能実装
 # 感じたこと
   + Renderのデプロイ設定に関して理解が深まった
   + 転職関連の資料作成や業務の引き継ぎが落ち着いたので久々にフルで作業時間を確保できた
