--- a/2024/02/06.md
+++ b/2024/02/06.md
@@ -1,19 +1,17 @@
 # 取り組んだ課題 
 + Xクローン
   + トップページ実装 (タスク分解)
-    + font-awesomeの導入
-    + 画面構成の作成・tweet関連のパーシャル作成
+    + 
 + 転職活動作業
 # わかったこと 
-+ Railsアプリにfont-awesomeを導入する方法
++ データベースではNULLは常に異なる値だとみなされる
 # 次やること
 + Xクローン
   + トップページ実装
 # 感じたこと
-+ github認証結構ハマったので解説動画を撮りました
-+ 少しハマったりしてだれていたので朝5時起き再開しました
++ 
 # 学習時間  
-+ 作業時間: 6h (合計: 546h)
++ 勉強時間: h (合計: 546h)
 
 # 残りの課題
 <details>
