--- a/2024/02/07.md
+++ b/2024/02/07.md
@@ -1,19 +1,22 @@
 # 取り組んだ課題 
 + Xクローン
-  + トップページ実装 (タスク分解)
-    + font-awesomeの導入
-    + 画面構成の作成・tweet関連のパーシャル作成
+  + トップページ実装
+    + seedデータ作成
+    + パーシャル作成
 + 転職活動作業
 # わかったこと 
-+ Railsアプリにfont-awesomeを導入する方法
++ `find`メソッドは、検索する時のキーがidのみ
++ `find_by`メソッドは、検索する時のキーがid以外の場合 (idも可)
+  + 返ってくるデータは、最初にヒットした一件のみ
++ `where`メソッドは、検索する時のキーがid以外の場合で、すべてのデータが返ってくる
 # 次やること
 + Xクローン
   + トップページ実装
+    + レイアウト調整
 # 感じたこと
-+ github認証結構ハマったので解説動画を撮りました
-+ 少しハマったりしてだれていたので朝5時起き再開しました
++ 
 # 学習時間  
-+ 作業時間: 6h (合計: 546h)
++ 勉強時間: 6h (合計: 550h)
 
 # 残りの課題
 <details>
