--- a/2024/03/03.md
+++ b/2024/03/03.md
@@ -1,25 +1,19 @@
 # 取り組んだ課題 
 + Xクローン
+  + いいね機能PR提出
   + メッセージ機能実装
 + 転職活動作業
 # わかったこと 
-+ `docker compose run web rails g model message sender_id:references recipient_id:references body:text`
-  + `references型`として指定した場合、以下の二点のメリットがある
-    + 外部キー制約
-      + データベースレベルで外部キー制約が設定され、参照整合性が保たれる。つまり、存在しないuser_idなどが設定されるのを防ぐ
-    + インデックスの自動生成
-      + 関連するカラムに自動的にインデックスが生成され、ジョイン操作などのパフォーマンスが向上
-    + マイグレーションファイルの外部キー関連の記述
-      + マイグレーションファイルに`add_foreign_key`のような外部キー制約に関する記述が自動で追加される
++ `has_many :through関連付け`にscopeを定義してデータを加工する方法
 # 次やること
 + Xクローン
   + メッセージ機能実装終わらせる
   + 通知機能のタスク分解
 # 感じたこと
-+ 転職活動作業などで、コードをちゃんと読めていなかったので随分と頭から抜けていた (なので、しっかりコードを読み直した)
-+ 3月の計画表を作成した
++ PR提出する作業はコードを頭にロードするのも兼ねて朝一やった方がいいなと実感しました(単純タスク系の作業だと後回しにしがちだったので..)
++ 細かな機能やUIの改善に意外と時間がかかった
 # 学習時間  
-+ 勉強時間: 5h (合計: 610h)
++ 勉強時間: 5h (合計: 615h)
 
 # 残りの課題
 <details>
