--- a/2024/03/04.md
+++ b/2024/03/04.md
@@ -1,18 +1,18 @@
 # 取り組んだ課題 
 + Xクローン
-  + いいね機能PR提出
+  + リツイート機能PR提出
   + メッセージ機能実装
 + 転職活動作業
 # わかったこと 
-+ `git reset --soft HEAD^`コマンドで、直前のコミットを無かったことにして、作業内容はワーキングディレクトリにそのまま残った状態で戻る
++ `git reset --soft HEAD^`コマンドで、直前のコミットを無かったことにして、作業内容はワーキングディレクトリにそのまま残った状態で戻る 
 # 次やること
 + Xクローン
   + メッセージ機能実装終わらせる
   + 通知機能のタスク分解
 # 感じたこと
-+ 
++ 本日は転職活動作業をメインに進め、隙間時間に実装方針を立てたりなどしました
 # 学習時間  
-+ 勉強時間: h (合計: 615h)
++ 勉強時間: 1h (合計: 616h)
 
 # 残りの課題
 <details>
