--- a/2024/03/11.md
+++ b/2024/03/11.md
@@ -3,20 +3,19 @@
   + メッセージ機能実装
 + 転職活動作業
 # わかったこと 
-+ 以下のように`belongs_to`関連付けは、指定したモデルのインスタンスとの関連付けを意味しており、:senderIdとしてしまうと、Railsが`SenderId`という名前のモデルを関連付けるものと解釈してしまう
-  + そのモデル名から関連しているクラス名を推測できない場合は、`class_name:オプション`でクラス名を明示する
-  + そのモデルが、「どの外部キーを使っているのか」を`foreign_keyオプション`で指定する
++ 以下のコードだと、`@messages`の要素の数だけ画面をレンダリングするので、テンプレート内ではeach文は使わないようにする
+  + each文を使う際は、`render template: 'messages/feed'`としてやる
 ```rb
-belongs_to :sender, class_name: 'User', foreign_key: 'sender_id'
+= render template: 'messages/feed', collection: @messages
 ```
 # 次やること
 + Xクローン
   + メッセージ機能実装終わらせる
   + 通知機能のタスク分解
 # 感じたこと
-+ railsの関連付けの理解が少し深まった
++ メッセージ機能のUI部分で、画面表示した時に一番下にスクロールされるようにJavascriptを導入したりなど、少し時間を要した
 # 学習時間  
-+ 勉強時間: 1.5h (合計: 625h)
++ 勉強時間: 4h (合計: 629h)
 
 # 残りの課題
 <details>
