--- a/2024/03/11.md
+++ b/2024/03/11.md
@@ -13,7 +13,7 @@
   + メッセージ機能実装終わらせる
   + 通知機能のタスク分解
 # 感じたこと
-+ メッセージ機能のUI部分で、画面表示した時に一番下にスクロールされるようにJavascriptを導入したりなど、少し時間を要した
++ メッセージ機能のUI部分で、画面表示した時に一番下にスクロールされるようにJavascriptを導入したりなど、少し時間を要したが、ある程度満足のいくレベルになってきたので嬉しい！
 # 学習時間  
 + 勉強時間: 4h (合計: 629h)
 
