--- a/2024/03/13.md
+++ b/2024/03/13.md
@@ -1,19 +1,16 @@
 # 取り組んだ課題 
 + Xクローン
-  + フォロー機能のPR作成 (UIや細かいところの修正)
   + 通知機能の実装
 + 転職活動作業
 # わかったこと 
-+ 双方向関連付けの手動設定
-  + `has_many, has_one, belongs_to..`などで関連付けを行うときに規約と違う名前を使うときは、`:inverse_of`で関連先から関連名を書くことで、ActiveRecordに双方向の関連付けを教えることができる
++ 
 # 次やること
 + Xクローン
   + 通知機能の実装
 # 感じたこと
-+ コードレビューを依頼するための準備などで、色々と細かい不具合やきちんと説明するために調べたりと「見てもらうための準備」に時間がかかった
-+ 起きて90秒以内に作業に取り掛かったら簡単にフロー状態に入って1日の作業量が増えた。続けていきたい
++ 
 # 学習時間  
-+ 勉強時間: 7h (合計: 636h)
++ 勉強時間: h (合計: 636h)
 
 # 残りの課題
 <details>
