--- a/2024/03/14.md
+++ b/2024/03/14.md
@@ -2,14 +2,17 @@
 + Xクローン
 + 転職活動作業
 # わかったこと 
-+ 特になしです
++ `const`は再代入ができず、`let`は再代入ができる
++ jsで配列に対して何らかの操作を行うときは、`forEach`は極力使わずに、`filter, find, map, reduce`を使うようにする
 # 次やること
 + Xクローン
   + 通知機能の実装
 # 感じたこと
-+ 本日は転職活動資料の作成とコーディング試験を受けたりしていました。明日引き続き、Xクローンの実装を進めたいと思います
++ DM機能のモデル設計がroomのuser_idが固定されていて、2人のユーザーが入るのでEntryモデルを作り直す必要があるので骨が折れる。とりあえず作り進めてみて割と作り終わりかけのところで発覚した矛盾点なので、もう少しリサーチに時間をかけたり入念に設計すれば良かったと反省しています
 # 学習時間  
-+ 勉強時間: 6.5h (合計: 636h)
++ 勉強時間: 6h (合計: 637h)
+
+
 
 # 残りの課題
 <details>
