--- a/2024/03/30.md
+++ b/2024/03/30.md
@@ -1,18 +1,21 @@
 # 取り組んだ課題 
 + Xクローン
-  + 通知機能
-  + ブックマーク機能
-+ 転職活動作業
-  + wantedlyプロフィール修正
+  + メッセージ機能PR作成 & リファクタ
++ 今後の計画作成
 # わかったこと 
-+ 特になし
++ unlessの使い方
 # 次やること
 + Xクローン
   + PRの提出
++ 自動テスト
+  + RSpecインプット
 # 感じたこと
-+ 
++ 課題を進める際に、以下の３つを再度意識するよう心がける
+  1. 優先順位をつける (一月のうち最低限終わらせる必要のあるもの3つまでに絞る)
+  2. 一点集中
+  3. 毎日記録 (最近等閑になっていたので再度継続する)
 # 学習時間  
-+ 勉強時間: 3h (合計: 646.5h)
++ 勉強時間: 3h (合計: 649.5h)
 
 
 
