--- a/2024/03/31.md
+++ b/2024/03/31.md
@@ -1,19 +1,18 @@
 # 取り組んだ課題 
 + Xクローン
-  + 通知機能
-  + ブックマーク機能
-+ 転職活動作業
-  + wantedlyプロフィール修正
+  + メッセージ機能PR作成 & リファクタ
++ 今後の計画作成
 # わかったこと 
 + 特になし
 # 次やること
 + Xクローン
-  + PRの提出
+  + 通知機能PRの提出
++ 自動テスト
+  + RSpecインプット
 # 感じたこと
-+ 
++ レビュワーに見てもらうためにリファクタ・細かいUX部分の修正は意外と時間がかかる
 # 学習時間  
-+ 勉強時間: 3h (合計: 646.5h)
-
++ 勉強時間: 2h (合計: 651.5h)
 
 
 
