--- a/2024/サボった時の対処法.md
+++ b/2024/サボった時の対処法.md
@@ -1,5 +1,3 @@
 
-+ おはツイ・日報出す毎日出す
-+ 激ハマりしたら取り敢えず朝5時に起きるようにする
-+ Bizzなり市大図書館なり早朝から外に出て、長い時間確保してしっかり調べる
-+ 
++ コワーキングスペースなど、家以外の環境を作る
++ コミュニティに参加して頑張っている人と実際に会って話す
