--- a/2024/12/19.md
+++ b/2024/12/19.md
@@ -4,7 +4,13 @@ f# 取り組んだ課題
 
 # わかったこと・メモ
 
-+ よく検索されるデータorクエリに対してindexを貼る方法
++ DBのindexは何に対して作成するのか？
+  + よく検索されるカラム (foreign_key, よく検索に使われるカラム)
++ どのようにindexを貼るのか？
+  + 例えば、usersテーブルのnameカラムにindexを貼る場合
+    + railsのmodel作成コマンドで生成されるmigrationファイルにindex設定を記載
+    + 貼らないと該当のnameが一番下にある場合、上から順番に検索したらめちゃくちゃ時間がかかってしまう
++ indexを貼った場合とそうでない場合での検索時の挙動
 
 + graphqlとapollo/prismaを使ってデータ取得を実装する時に、queryには
 ```graphql
@@ -34,15 +40,7 @@ type Mutation {
 }
 ```
 
-+ typescriptでundefinedの可能性がある変数を引数に指定した時に起きたエラーの対処法
-```ts
-const argText = contents.find(c => c === params.text) // undefinedになる可能性がある
-//型ガードを入れてundefinedの可能性を排除する
-if (!argText) {
-  throw new Error("argTextはundefinedです...")
-}
-const result = await getContent(argText)
-```
++ 
 
 
 # 次やること
